fixed spacing of icon for phone screens

--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -94,12 +94,12 @@ body {
     animation: moveInLeft 2s ease-out; }
     @media only screen and (max-width: 43.75em) {
       .heading-primary--main {
-        font-size: 1.1rem;
+        font-size: 1.6rem;
         letter-spacing: 1.2rem; } }
     @media only screen and (max-width: 25em) {
       .heading-primary--main {
-        font-size: .8rem;
-        letter-spacing: 1rem; } }
+        font-size: 1rem;
+        letter-spacing: 1.1rem; } }
   .heading-primary--sub {
     display: flex;
     font-family: 'Raleway', sans-serif;
@@ -108,12 +108,12 @@ body {
     animation: fadeIn 2s ease-out; }
     @media only screen and (max-width: 43.75em) {
       .heading-primary--sub {
-        font-size: 1rem;
-        letter-spacing: 1rem; } }
+        font-size: 1.3rem;
+        letter-spacing: 1.1rem; } }
     @media only screen and (max-width: 25em) {
       .heading-primary--sub {
-        font-size: .8rem;
-        letter-spacing: .8rem; } }
+        font-size: 1rem;
+        letter-spacing: 1rem; } }
 
 .about-me {
   background-color: white;
@@ -158,7 +158,7 @@ body {
         width: 50rem; } }
     @media only screen and (max-width: 43.75em) {
       .about-me__content {
-        width: 28rem; } }
+        width: 32rem; } }
     .about-me__content__btn {
       margin: 5rem auto; }
 
@@ -197,6 +197,11 @@ body {
       transform: translateY(-1.5rem) translateX(3rem);
       align-self: flex-start;
       transform: translateX(1rem) translateY(2.5rem); }
+      @media only screen and (max-width: 43.75em) {
+        .my-experience .project__icon {
+          width: 3rem;
+          height: 3rem;
+          transform: translateX(-1rem) translateY(2.3rem); } }
   @media only screen and (max-width: 56.25em) {
     .my-experience {
       flex-direction: column;
