--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -87,12 +87,12 @@
         margin-bottom: 3rem;
         animation: moveInLeft 2s ease-out;
         @media only screen and (max-width: $bp-small) {
-            font-size: 1.1rem;
+            font-size: 1.6rem;
             letter-spacing: 1.2rem;
         }
         @media only screen and (max-width: $bp-smallest) {
-            font-size: .8rem;
-            letter-spacing: 1rem;
+            font-size: 1rem;
+            letter-spacing: 1.1rem;
         }
     }
     &--sub {
@@ -102,12 +102,12 @@
         letter-spacing: 1.3rem;
         animation: fadeIn 2s ease-out;
         @media only screen and (max-width: $bp-small) {
-            font-size: 1rem;
-            letter-spacing: 1rem;
+            font-size: 1.3rem;
+            letter-spacing: 1.1rem;
         }
         @media only screen and (max-width: $bp-smallest) {
-            font-size: .8rem;
-            letter-spacing: .8rem;
+            font-size: 1rem;
+            letter-spacing: 1rem;
         }
     }
 }
@@ -160,7 +160,7 @@
             width: 50rem;
         }
         @media only screen and (max-width: $bp-small) {
-            width: 28rem;
+            width: 32rem;
         }
 
         &__btn {
@@ -211,6 +211,11 @@
             transform: translateY(-1.5rem) translateX(3rem);
             align-self: flex-start;
             transform: translateX(1rem) translateY(2.5rem);
+            @media only screen and (max-width: $bp-small) {
+                width: 3rem;
+                height: 3rem;
+                transform: translateX(-1rem) translateY(2.3rem);
+            }
         }
     }
     @media only screen and (max-width: $bp-medium) {
